Closed Bug 1329411 Opened 9 years ago Closed 9 years ago

Tab bar visual glitch when hovering over the new tab button

Categories

(Core :: Web Painting, defect)

53 Branch
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox50 --- unaffected
firefox51 --- unaffected
firefox52 --- unaffected
firefox53 + fixed

People

(Reporter: jimm, Assigned: u459114)

References

Details

(Keywords: regression)

Attachments

(5 files)

Attached image tab bar glitch.jpg
STR: 1) open up a few tab containers in a window 2) hover over the new tab button next to the last container tab opened result: see attached. there's a little black bar that gets added to the end of the last tab.
Blocks: 1323912
Has Regression Range: --- → yes
Has STR: --- → yes
Flags: needinfo?(cku)
Keywords: regression
Attached image Another screenshot
We got it even worse with both a black bar and a blue bar.
Attached video Video
It seems to only affect the active container tab.
This looks like a layout or graphics issue to me, esp. given the regression range, so moving to Core.
Component: Toolbars and Customization → Untriaged
Product: Firefox → Core
Coming from bug 1329479 I locally backed out the six changesets from bug 1323912 and the artefacts went away.
Severity: normal → major
Component: Untriaged → Layout: View Rendering
Version: unspecified → 53 Branch
The effect of this bug on the tab bar becomes more pronounced when using the Classic Theme Restorer extension -- the consequence being that all inactive tabs, on the tab bar, appear black.
Assignee: nobody → cku
Flags: needinfo?(cku)
"Bug 1323912 - Part 3. Pass opacity in gradient-mask painting path." caused this glitch.
Attachment #8824849 - Flags: review?(mstange)
Attachment #8824849 - Flags: review?(mstange)
Attachment #8824849 - Flags: review?(mstange)
Comment on attachment 8824849 [details] Bug 1329411 - Correct wrong alpha value caused by the sixth patch in bug 1323912, and a test case. https://reviewboard.mozilla.org/r/103138/#review103720 Is the "extreme scroll position" in the test necessary? It's fine as is, but it might be a bit misleading if it's not necessary.
Attachment #8824849 - Flags: review?(mstange) → review+
Pushed by cku@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/afdccbbb363d Correct wrong alpha value caused by the sixth patch in bug 1323912, and a test case. r=mstange
Tracking 53+ for this visible regression.
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Summary: Containers tab bar visual glitch when hovering over the new tab button → Tab bar visual glitch when hovering over the new tab button
Seems to be fixed in latest Nightly.
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: