Bug 1329411 - Correct wrong alpha value caused by the sixth patch in bug 1323912, and a test case. r=mstange

MozReview-Commit-ID: 8iSyUxQ1EnM